--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .obsidian/workspace.json
 .obsidian/workspace-mobile.json
 output.txt
+.obsidian/workspace.json
+.obsidian/appearance.json
+.obsidian/app.json
+.obsidian/workspace.json
